update select unselect product

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     <li class="nav-item active">
-      <button class="btn btn-outline-info ml-2" type="button" (click)="onGetProductsList()">All</button>
+      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onGetProductsList()">All</button>
     </li>
     <li class="nav-item">
-      <button class="btn btn-outline-info ml-2" type="button" (click)="onSelectedProducts()">Selected</button>
+      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onSelectedProducts()">Selected</button>
     </li>
     <li class="nav-item">
-      <button class="btn btn-outline-info ml-2" type="button" (click)="onAvailableProducts()">Available</button>
+      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onAvailableProducts()">Available</button>
     </li>
   </ul>
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+  <form #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-inline my-2 my-lg-0 input-group-sm">
+    <input ngModel name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-sm btn-info my-2 my-sm-0" type="submit"> <i class="fa fa-search"></i></button>
   </form>
 </nav>
 
@@ -36,6 +36,7 @@
           <th scope="col">Quantity</th>
           <th scope="col">Selected</th>
           <th scope="col">Available</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -46,6 +47,12 @@
           <td>{{product.quantity}}</td>
           <td>{{product.selected}}</td>
           <td>{{product.available}}</td>
+          <td>
+            <button class="btn btn-sm" (click)="onSelected(product)" [ngClass]="(product.selected) ? 'btn-success' : 'btn-danger'">
+              <span *ngIf="product.selected">deselect</span>
+              <span *ngIf="!product.selected">Select</span>
+            </button>
+          </td>
         </tr>
       </tbody>
     </table>
