--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -9,6 +9,9 @@
     <li class="nav-item">
       <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onAvailableProducts()">Available</button>
     </li>
+    <li class="nav-item">
+      <button class="btn btn-sm btn-success ml-2" type="button" (click)="onNewProduct()">New</button>
+    </li>
   </ul>
   <form #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-inline my-2 my-lg-0 input-group-sm">
     <input ngModel name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -36,7 +39,7 @@
           <th scope="col">Quantity</th>
           <th scope="col">Selected</th>
           <th scope="col">Available</th>
-          <th scope="col" colspan="2"></th>
+          <th scope="col" colspan="3"></th>
         </tr>
       </thead>
       <tbody>
@@ -56,6 +59,11 @@
           <td>
             <button class="btn btn-sm btn-danger" (click)="onDelete(product)">
               <i class="fa fa-trash" aria-hidden="true"></i>
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm btn-warning" (click)="onEdit(product)">
+              <i class="fa fa-edit" aria-hidden="true"></i>
             </button>
           </td>
         </tr>
