--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,99 +1,7 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    <li class="nav-item active">
-      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onGetProductsList()">All</button>
-    </li>
-    <li class="nav-item">
-      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onSelectedProducts()">Selected</button>
-    </li>
-    <li class="nav-item">
-      <button class="btn btn-sm btn-outline-info ml-2" type="button" (click)="onAvailableProducts()">Available</button>
-    </li>
-    <li class="nav-item">
-      <button class="btn btn-sm btn-success ml-2" type="button" (click)="onNewProduct()">New</button>
-    </li>
-  </ul>
-  <form #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-inline my-2 my-lg-0 input-group-sm">
-    <input ngModel name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-sm btn-info my-2 my-sm-0" type="submit"> <i class="fa fa-search"></i></button>
-  </form>
-</nav>
 
-<ng-container *ngIf="products$ | async as result" [ngSwitch]="result.dataState">
-  <!-- {{result | json}} -->
-  <ng-container *ngSwitchCase="dataStateEnum.LOADING">
-    Loading ...
-  </ng-container>
-  <ng-container *ngSwitchCase="dataStateEnum.ERROR">
-    <div class="alert-danger">
-     Une erreure s'est produite : {{result.errorMessage}}
-    </div>
-  </ng-container>
-  <ng-container *ngSwitchCase="dataStateEnum.LOADED">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Selected</th>
-          <th scope="col">Available</th>
-          <th scope="col" colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of result.data">
-          <th scope="row">{{product.id}}</th>
-          <td>{{product.name}}</td>
-          <td>{{product.price}}</td>
-          <td>{{product.quantity}}</td>
-          <td>{{product.selected}}</td>
-          <td>{{product.available}}</td>
-          <td>
-            <button class="btn btn-sm" (click)="onSelect(product)" [ngClass]="(product.selected) ? 'btn-success' : 'btn-danger'">
-              <span *ngIf="product.selected">deselect</span>
-              <span *ngIf="!product.selected">Select</span>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-danger" (click)="onDelete(product)">
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-warning" (click)="onEdit(product)">
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </ng-container>
-</ng-container>
+<app-products-nav-bar (navbarProductsActionEventEmit)="onActionEvent($event)"></app-products-nav-bar>
+<app-products-list
+  (productActionEventEmitter)="onActionEvent($event)"
+  [productsInput$]="products$"
+  ></app-products-list>
 
-
-<!-- <div class="container" *ngIf="products$">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Name</th>
-        <th scope="col">Price</th>
-        <th scope="col">Quantity</th>
-        <th scope="col">Selected</th>
-        <th scope="col">Available</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let product of products$ | async">
-        <th scope="row">{{product.id}}</th>
-        <td>{{product.name}}</td>
-        <td>{{product.price}}</td>
-        <td>{{product.quantity}}</td>
-        <td>{{product.selected}}</td>
-        <td>{{product.available}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
