--- a/src/app/components/products/products-list/products-list.component.html
+++ b/src/app/components/products/products-list/products-list.component.html
@@ -22,30 +22,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let product of result.data">
-          <th scope="row">{{product.id}}</th>
-          <td>{{product.name}}</td>
-          <td>{{product.price}}</td>
-          <td>{{product.quantity}}</td>
-          <td>{{product.selected}}</td>
-          <td>{{product.available}}</td>
-          <td>
-            <button class="btn btn-sm" (click)="onSelect(product)" [ngClass]="(product.selected) ? 'btn-success' : 'btn-danger'">
-              <span *ngIf="product.selected">deselect</span>
-              <span *ngIf="!product.selected">Select</span>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-danger" (click)="onDelete(product)">
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-warning" (click)="onEdit(product)">
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            </button>
-          </td>
-        </tr>
+        <app-product-item
+          *ngFor="let product of result.data"
+          [productInput]="product"
+          (actionProductEventEmit)="onActionEvent($event)"
+          style="display: contents;"
+        ></app-product-item>
       </tbody>
     </table>
   </ng-container>
