--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -14,6 +14,9 @@
           <a class="nav-link" [routerLink]="['/products']">Products</a>
         </li>
       </ul>
+      <div class="my-2 my-lg-0">
+        <app-counter-states></app-counter-states>
+      </div>
     </div>
   </nav>
 </div>
