--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,4 @@
 
-<app-products-nav-bar (navbarProductsActionEventEmit)="onActionEvent($event)"></app-products-nav-bar>
-<app-products-list
-  (productActionEventEmitter)="onActionEvent($event)"
-  [productsInput$]="products$"
-  ></app-products-list>
+<app-products-nav-bar></app-products-nav-bar>
+<app-products-list [productsInput$]="products$" ></app-products-list>
 
