Amelioration affichage icone

--- a/src/app/components/products/products-list/products-list.component.html
+++ b/src/app/components/products/products-list/products-list.component.html
@@ -9,7 +9,7 @@
     </div>
   </ng-container>
   <ng-container *ngSwitchCase="dataStateEnum.LOADED">
-    <table class="table table-bordered">
+    <table class="table table-bordered text-center">
       <thead>
         <tr>
           <th scope="col">ID</th>
