--- a/src/app/components/products/product-item/product-item.component.html
+++ b/src/app/components/products/product-item/product-item.component.html
@@ -3,8 +3,12 @@
   <td>{{productInput.name}}</td>
   <td>{{productInput.price}}</td>
   <td>{{productInput.quantity}}</td>
-  <td>{{productInput.selected}}</td>
-  <td>{{productInput.available}}</td>
+  <td>
+    <i class="fa " [ngClass]="productInput.selected ? 'fa-heart text-danger': 'fa-heart-o'"></i>
+  </td>
+  <td>
+    <i class="fa " [ngClass]="productInput.available ? 'fa-check-square-o text-success': 'fa-square-o'"></i>
+  </td>
   <td>
     <button class="btn btn-sm" (click)="onSelect(productInput)" [ngClass]="(productInput.selected) ? 'btn-success' : 'btn-danger'">
       <span *ngIf="productInput.selected">deselect</span>
