--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Link 1</a>
+      <a class="nav-link" routerLink="/products" href="#">Products</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link 2</a>
     </li>
 
     <!-- Dropdown -->
-    <li class="nav-item dropdown">
+    <!-- <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Dropdown link
       </a>
@@ -21,6 +21,7 @@
         <a class="dropdown-item" href="#">Link 2</a>
         <a class="dropdown-item" href="#">Link 3</a>
       </div>
-    </li>
+    </li> -->
   </ul>
 </nav>
+<router-outlet></router-outlet>
