--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,16 @@
 <div class="p-4">
   <app-products-nav-bar></app-products-nav-bar>
-  liste prd
+  <ng-container *ngIf="productsState$ | async as state" [ngSwitch]="state.dataState">
+    <ng-container *ngSwitchCase="DataStateEnum.INITIAL">
+      <div class="p-2">Initial state</div>
+    </ng-container>
+    <ng-container *ngSwitchCase="DataStateEnum.LOADING">
+      <div class="p-2">Loading ...</div>
+    </ng-container>
+    <ng-container *ngSwitchCase="DataStateEnum.LOADING">
+      <div class="p-2">Loading ...</div>
+    </ng-container>
+
+  </ng-container>
+
 </div>
